--- a/Unit02/index_5.html
+++ b/Unit02/index_5.html
@@ -51,7 +51,7 @@
 			</tr>
 			<tr>
 				<td>Email: </td>
-				<td><input type="email"> <br></td>
+				<td><input type="email" placeholder="nhập email"> <br></td>
 			</tr>
 			<tr>
 				<td>Định hướng </td>
@@ -67,8 +67,19 @@
 				<input type="radio" name="gender">nữ</td>
 			</tr>
 			<tr>
-				<td></td>
-				<td></td>
+				<td>Quê quán:</td>
+				<td>
+					<select name="" id=""></select>
+						<option value="">Hà Nội</option>
+						<option value="">Hải Phòng</option>
+						<option value="">Nam Định</option>
+				</td>
+			</tr>
+			<tr>
+				<td>Ghi chú:</td>
+				<td>
+					<textarea name="" id="" cols="5" rows="30"></textarea>
+				</td>
 			</tr>
 		</table>
 	</form>
