--- a/Unit05/HW/BT.html
+++ b/Unit05/HW/BT.html
@@ -7,86 +7,7 @@
 	<link rel="stylesheet" href="top_1.css">
 	<link rel="stylesheet" href="top_2.css">
 	<link rel="stylesheet" href="no_1.css">
-	<style>
-		.d250_no_2{
-			height: 250px;
-		}
-		#how_to_watch{
-			margin-bottom: 5px; 
-		}
-		#how_to_watch_title{
-			color: white;
-			padding: 1px 17px;
-			background-color: #bb1919 !important;
-			background: url(../images/tv.png) 4px 13px no-repeat;
-			background-size: 10px;
-		}
-		#how_to_watch_main h3{
-			margin: 2px 0px;
-		}
-		#how_to_watch_main{
-			font-size: 13px;
-			padding: 8px 0px 5px 7px;
-			background-color: #f2efec !important;
-		}
-		
-		#listen_live_title{
-			color: white;
-			padding: 1px 17px;
-			background-color: #222222 !important;
-			background: url(../images/speaker.png) 4px 13px no-repeat;
-			background-size: 10px;
-		}
-		#listen_live_main h3{
-			margin: 2px 0px;
-		}
-		#listen_live_main{
-			font-size: 13px;
-			padding: 8px 0px 5px 7px;
-			background-color: #f2efec !important;
-		}
-		#listen_live{
-			margin-bottom: 5px; 
-		}
-		.title_hr_right{
-			z-index: 1;
-			right: -16px;
-			background-color: white;
-			padding: 16px;
-			padding-right: 32px;
-			position: absolute;
-			margin: 0px;
-		}
-		h2:hover{
-			text-decoration: underline;
-			cursor: pointer;
-			color: blue;
-		}
-		h3:hover{
-			text-decoration: underline;
-			cursor: pointer;
-			color: blue;
-		}
-		a:hover{
-			text-decoration: underline;
-			color: blue !important;
-		}
-		.d250:hover{
-			cursor: pointer;
-		}
-		.d250:hover h3{
-			text-decoration: underline;
-			color: blue;
-		}
-		.d250x295n:hover{
-			cursor: pointer;
-		}
-		.d250x295n:hover h2{
-			text-decoration: underline !important;
-			color: blue !important;
-		}
-
-	</style>
+	<link rel="stylesheet" href="last.css">
 </head>
 <body>
 	<div id="main">
