--- a/Unit06/HW/BT.html
+++ b/Unit06/HW/BT.html
@@ -580,21 +580,21 @@
 					</div>
 				</div>
 				<div class="inside_part_1">
-					<img src="../images/8301275466_9c1b00e143_k-450x350.jpg" alt=""
+					<img src="../images/ao_len.jpg" alt=""
 					width="100%">
 					<div>
 						<a href="">Enjoy the full of it</a>
 					</div>
 				</div>
 				<div class="inside_part_1">
-					<img src="../images/8301275466_9c1b00e143_k-450x350.jpg" alt=""
+					<img src="../images/portrait.png" alt=""
 					width="100%">
 					<div>
 						<a href="">Save the clock tower now</a>
 					</div>
 				</div>
 				<div class="inside_part_1">
-					<img src="../images/8301275466_9c1b00e143_k-450x350.jpg" alt=""
+					<img src="../images/sleep.jpg" alt=""
 					width="100%">
 					<div>
 						<a href="">I like what is happening</a>
