--- a/Unit11/HW/B1.html
+++ b/Unit11/HW/B1.html
@@ -41,45 +41,21 @@
 	</div>
 	<script>
 		$(function(){
-			$("li:eq(0)").on('click',function(){
-				$('.section:gt(0),.section:lt(0)').removeClass('active');
-				$("li:eq(0)").next().toggleClass('active');
-				$('.cong:gt(0),.cong:lt(0)').text('+');
-				if($(" .cong:eq(0)").text()=="--"){
-					$(" .cong:eq(0)").text("+")
-				}else{
-					$(" .cong:eq(0)").text("--")
-				}
-			})
-			$("li:eq(1)").on('click',function(){
-				$('.section:gt(1),.section:lt(1)').removeClass('active');
-				$("li:eq(1)").next().toggleClass('active');
-				$('.cong:gt(1),.cong:lt(1)').text('+');
-				if($(" .cong:eq(1)").text()=="--"){
-					$(" .cong:eq(1)").text("+")
-				}else{
-					$(" .cong:eq(1)").text("--")
-				}
-			})
-			$("li:eq(2)").on('click',function(){
-				$('.section:gt(2),.section:lt(2)').removeClass('active');
-				$("li:eq(2)").next().toggleClass('active');
-				$('.cong:gt(2),.cong:lt(2)').text('+');
-				if($(" .cong:eq(2)").text()=="--"){
-					$(" .cong:eq(2)").text("+")
-				}else{
-					$(" .cong:eq(2)").text("--")
-				}
-			})
-			$("li:eq(3)").on('click',function(){
-				$('.section:gt(3),.section:lt(3)').removeClass('active');
-				$("li:eq(3)").next().toggleClass('active');
-				$('.cong:gt(3),.cong:lt(3)').text('+');
-				if($(" .cong:eq(3)").text()=="--"){
-					$(" .cong:eq(3)").text("+")
-				}else{
-					$(" .cong:eq(3)").text("--")
-				}
+			var arr = new Array();
+			for (var i = 0; i < $("li").length; i++) {
+				arr.push(i);
+			}
+			arr.forEach(function(value) {
+				$("li:eq("+value+")").on('click',function(){
+					$('.section:gt('+value+'),.section:lt('+value+')').removeClass('active');
+					$("li:eq("+value+")").next().toggleClass('active');
+					$('.cong:gt('+value+'),.cong:lt('+value+')').text('+');
+					if($(" .cong:eq("+value+")").text()=="--"){
+						$(" .cong:eq("+value+")").text("+")
+					}else{
+						$(" .cong:eq("+value+")").text("--")
+					}
+				})
 			})
 		})
 	</script>
