--- a/Unit12/animateWow.html
+++ b/Unit12/animateWow.html
@@ -19,6 +19,16 @@
 </head>
 <body>
 	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
+	<div class="wow bounce" data-wow-duration="2s" data-wow-delay="2s"  data-wow-iteration="infinite"></div>
 	<p class="wow rotateOut">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, quidem illo aliquid possimus nam nihil cum cupiditate voluptate vitae quo!</p>
 </body>
 </html>
